fixed spacing issues

--- a/pages/About.module.scss
+++ b/pages/About.module.scss
@@ -8,34 +8,36 @@ section.aboutme {
     // @media (max-width: 1225px) {
     //     gap: 50px;
     // }
+    gap: 100px;
     @media (max-width: 989px) {
         flex-direction: column;
     }
     margin-bottom: 167px;
     .image {
         justify-content: center;
-        margin-left: 267px;
+        // margin-left: 267px;
         transition: margin-left 0.3s ease;
         z-index: 3;
-        @media (max-width: 1737px) {
-            margin-left: 20px;
-        }
-        @media (max-width: 989px) {
-            margin-left: 5px;
-            margin-right: 25px;
-        }
+        // @media (max-width: 1737px) {
+        //     margin-left: 20px;
+        // }
+        // @media (max-width: 989px) {
+        //     margin-left: 5px;
+        //     margin-right: 25px;
+        // }
     }
     .info {
         justify-content: center;
         max-width: 419px;
         color: white;
-        margin-right: 267px;
+        // margin-right: 267px;
         transition: margin-right 0.3s ease;
-        @media (max-width: 1737px) {
-            margin-right: 20px;
-        }
+        // @media (max-width: 1737px) {
+        //     margin-right: 20px;
+        // }
         z-index: 3;
         @media (max-width: 989px) {
+            // margin-top: 20px;
             text-align: center;
             margin-left: 25px;
             margin-right: 5px;
